syntax = "proto3";

option java_package = "m1.archi.services";
package m1.archi;

import "models/offre.proto";
import "google/protobuf/timestamp.proto";


message RechercherChambresRequest {
  string ville = 1;
  google.protobuf.Timestamp dateArrivee = 2;  // Utilise un type Timestamp pour repr√©senter LocalDateTime
  google.protobuf.Timestamp dateDepart = 3;
  int32 prixMin = 4;
  int32 prixMax = 5;
  int32 nombreEtoiles = 6;
  int32 nombrePersonne = 7;
}

message RechercherChambresResponse {
  repeated Offre offre = 1;
}

service RechercherChambresService {
  rpc RechercherChambres(RechercherChambresRequest) returns (RechercherChambresResponse);
}
